[package]
name = "payments-engine-core"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# observability
tracing = "0.1"
# utils
futures = "0.3"
serde = {version = "1.0", features = ["derive"] }
async-trait = "0.1"
rust_decimal = { version = "1.21", features = ["serde-str"] }
rust_decimal_macros = "1.21"
# errors
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
